설명 및 크로마키 이미지로 교체

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mars people camera</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index.css?ver=4">
 </head>
 <body>
-    
+    <div class="main"></div>
+    <div class="main description">
+        <h1>이게... 먼가요?</h1>
+        <iframe class="videoBox" src="https://www.youtube.com/embed/3yWaWp5xvlU?si=mrxd2gkWtPVQfLw_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br /><br />
+        위 영상에 나오는 크로마키를 웹으로 만든 것입니다.<br />
+        누구나 쉽게 웹페이지로 따라하는 마즈피플!! 👽👽👽
+        <br />
+        <h1>출처</h1>
+        이미지<br />
+        <a target="_blank" href="https://cafe.naver.com/kimdoe/52260">https://cafe.naver.com/kimdoe/52260</a><br />
+        <br />
+        <h1>github</h1>
+        <a target="_blank" href="https://github.com/daemyung6/mars-people-cam">https://github.com/daemyung6/mars-people-cam</a>
+
+
+    </div>
 </body>
-<script type="module" src="./app.js?ver=3"></script>
+<script type="module" src="./app.js?ver=4"></script>
 </html>
