--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="mars people camera">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://daemyung6.github.io/mars-people-cam/frame-1.png">
+    <meta property="og:description" content="누구나 쉽게 웹페이지로 따라하는 마즈피플!! 👽👽👽">
+
     <title>mars people camera</title>
     <link rel="stylesheet" href="./index.css?ver=4">
 </head>
