--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta property="og:description" content="누구나 쉽게 웹페이지로 따라하는 마즈피플!! 👽👽👽">
 
     <title>mars people camera</title>
-    <link rel="stylesheet" href="./index.css?ver=4">
+    <link rel="stylesheet" href="./index.css?ver=6">
 </head>
 <body>
-    <div class="main"></div>
+    <div class="main root"></div>
     <div class="main description">
         <h1>이게... 먼가요?</h1>
         <iframe class="videoBox" src="https://www.youtube.com/embed/3yWaWp5xvlU?si=mrxd2gkWtPVQfLw_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -30,5 +30,5 @@
 
     </div>
 </body>
-<script type="module" src="./app.js?ver=5"></script>
+<script type="module" src="./app.js?ver=6"></script>
 </html>
